28/12/2015 1.1.0.2

    user visible changes client:
    * Mac: Separated changing of permission from rsync, because it prevented rsync
        from created hardlinks.
    * Removed ".svn" from COPY_IGNORE_PATTERNS, it's no longer relevant.

20/12/2015 1.1.0.1

    user visible changes client:
    * Windows: Some cmd tools are located if they are not in one of the PATH folders.
        The list of such tools is in "CMD_TOOLS_TO_FIND" & "CMD_TOOLS_TO_FIND_INTERNAL" variabless.

31/11/2015 1.1.0.0

    user visible changes client:
    * new doit command for fast and easy actions that do not require sync/copy

26/11/2015 1.0.1.5

    user visible changes client:
    * Added sorting to some lists that use to create the install instaructions.
        This will make the produced batch files more consitant from run to run and enable comparing before/after changes

17/11/2015 1.0.1.4

    user visible changes client:
    * --out option is now optional and defaults to "$(__MAIN_INPUT_FILE__)-$(__MAIN_COMMAND__).$(BATCH_EXT)"
        if not explicitly supplied
    * Number of curl configuration files is calculated to reach the max possible even if
        number of files to download is smaller than the max config files allowed

    user visible changes, client & admin:
    * new command line option -define, allows to add variable definitions from the command line.
    * __CREDENTIALS__ is now resolved in connection_factory to allow it to include references to other variables

    programmer visible changes:
    * new functions unique_list.sort, unique_list.empty

4/11/2015 1.0.1.3

    user visible changes, admin:
    * add "--base-repo-rev" trans command that was missing in previous commits.

3/11/2015 1.0.1.2

    user visible changes, admin:
    * New command create-infomap, to create info_map.txt from a repository.
    * create-links command re-implemened new create-infomap command.